--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,32 @@
 !/upload/npwp/.gitkeep
 /upload/nib/*
 !/upload/nib/.gitkeep
+
+/upload/accept_ktp/*
+/upload/accept_npwp/*
+/upload/accept_pass_photo/*
+/upload/accept_swa/*
+/upload/dokumen_permohonan/*
+/upload/file_draft/*
+/upload/file_pendukung/*
+/upload/ktp/*
+/upload/nib_file/*
+/upload/pas_photo/*
+/upload/pernyataan_teknis/*
+/upload/swa/*
+/upload/profile/*
+/upload/photo/*
+!/upload/photo/profile_small.jpg
+
+!/upload/accept_ktp/.gitkeep
+!/upload/accept_npwp/.gitkeep
+!/upload/accept_pass_photo/.gitkeep
+!/upload/accept_swa/.gitkeep
+!/upload/dokumen_permohonan/.gitkeep
+!/upload/file_draft/.gitkeep
+!/upload/file_pendukung/.gitkeep
+!/upload/ktp/.gitkeep
+!/upload/nib_file/.gitkeep
+!/upload/pas_photo/.gitkeep
+!/upload/pernyataan_teknis/.gitkeep
+!/upload/swa/.gitkeep
